--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфолио</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/Project.Portfolio/main.css">
     <script src="https://yandex.st/jquery/2.1.1/jquery.min.js"></script>
-    <script src="/jquery.js"></script>
-    <link rel="stylesheet" href="/links.css">
+    <script src="/Project.Portfolio/jquery.js"></script>
+    <link rel="stylesheet" href="/Project.Portfolio/links.css">
 </head>
 <body>
 <div class="container_all">
@@ -239,11 +239,9 @@
     </div>
 </main>
 </div>
-  <img src="/img/vecteezy_3d-rendered-icon-fast-food-illustration_27252280.png" alt="logo" class="logo_1">  
-  <img src="/img/vecteezy_3d-rendered-icon-fast-food-illustration_27252280.png" alt="logo" class="logo_2">  
-  <img src="/img/vecteezy_3d-rendered-icon-fast-food-illustration_27252280.png" alt="logo" class="logo_3">  
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="main.js"></script>
-  
+  <img src="/Project.Portfolio/img/vecteezy_3d-rendered-icon-fast-food-illustration_27252280.png" alt="logo" class="logo_1">  
+  <img src="/Project.Portfolio/img/vecteezy_3d-rendered-icon-fast-food-illustration_27252280.png" alt="logo" class="logo_2">  
+  <img src="/Project.Portfolio/img/vecteezy_3d-rendered-icon-fast-food-illustration_27252280.png" alt="logo" class="logo_3">
+  <script src="/Project.Portfolio/main.js"></script>
 </body>
 </html>
