--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/Project.Portfolio/links.css">
 </head>
 <body>
+ <header> 
   <div id="preLoader">
     <canvas id="preLoaderCanvas"></canvas>
     <div class="square"></div>
@@ -24,6 +25,7 @@
     <button  class="developer-link">About me</button>
     <div class="container_1">
         <h1 id="portfolio">Портфолио</h1>
+        <div class="header">
             <div class="logo">
                 <img src="https://cdn-icons-png.flaticon.com/128/5968/5968267.png" alt="logo">
                 <img src="https://cdn-icons-png.flaticon.com/128/5968/5968242.png" alt="logo">
@@ -31,6 +33,7 @@
             </div>
         </div>
     </div> 
+<main> 
   <div class="container">
       <div class="card">
         <div class="front">
@@ -45,6 +48,8 @@
         </div>
       </div>
     </div>
+</header>
+
 <ul class="example-2">
 <li class="icon-content">
   <a
@@ -254,12 +259,11 @@ overflow: hidden;
         <div class="error-message"></div>
   </div>
   </div>
+</main>
 
-<div class="container_logo">
   <img src="/Project.Portfolio/img/vecteezy_3d-rendered-icon-fast-food-illustration_27252280.png" alt="logo" class="logo_1">  
   <img src="/Project.Portfolio/img/vecteezy_3d-rendered-icon-fast-food-illustration_27252280.png" alt="logo" class="logo_2">  
   <img src="/Project.Portfolio/img/vecteezy_3d-rendered-icon-fast-food-illustration_27252280.png" alt="logo" class="logo_3">
-</div>
   <script src="/Project.Portfolio/main.js"></script>
 </body>
 </html>
