--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="/Project.Portfolio/links.css">
 </head>
 <body>
- <header> 
   <div id="preLoader">
     <canvas id="preLoaderCanvas"></canvas>
     <div class="square"></div>
@@ -48,7 +47,6 @@
         </div>
       </div>
     </div>
-</header>
 
 <ul class="example-2">
 <li class="icon-content">
@@ -127,7 +125,7 @@
   <h2 class="name">Я студент 4 курса колледжа</h2>
   <h2 class="name">Я изучаю программирование</h2>
   <h2 class="name">В моих интересах изучить front-end и backend разработку</h2>
-  <h2 class="name">хочу работать в интересной компании c хорошем коллективом</h2>
+  <h2 class="name">хочу работать в интересной компании c хорошим коллективом</h2>
 </div>
 <button onclick="toggleVisibility()" type="text" class="made">Мои работы</button>
 <div id="container_myMade">
@@ -229,7 +227,7 @@ overflow: hidden;
     </label>
     <label class="label">
       <input type="radio" id="value-3" name="value-radio" value="value-3" />
-      <p class="text">Преподователь</p>
+      <p class="text">Преподаватель</p>
     </label>
   </div>
 </div>
